# devobox

./: .gitignore  Cargo.toml  GEMINI.md  GETTING_STARTED.md  README.md  install.sh
.github/workflows/: release.yml
config/: Containerfile  Makefile  databases.conf  databases.yml  default_containerfile.dockerfile  default_devobox.toml  default_services.yml  mise.toml  starship.toml  zellij.kdl
docs/: ARCHITECTURE.md  COMPARISON.md  COOKBOOK.md  GUIDE.md  WORKFLOW.md  architecture.md  host_setup.md  microservices.md  technical_roadmap.md  workflow.md
src/: agent.rs  builder.rs  cli.rs  config.rs  domain.rs  infra.rs  lib.rs  main.rs  podman.rs  runtime.rs  services.rs  test_support.rs
src/cli/: agent.rs  builder.rs  context.rs  mod.rs  runtime.rs  setup.rs  update.rs
src/domain/: container.rs  mod.rs  project.rs  traits.rs
src/infra/: config.rs  mod.rs  podman_adapter.rs  project_discovery.rs
src/services/: container_service.rs  mod.rs  orchestrator.rs  system_service.rs  zellij_service.rs
tests/: integration_tests.rs  resilience_tests.rs  workflow_tests.rs
