[package]
name = "devobox"
version = "0.1.0"
edition = "2024"

[lib]
name = "devobox"
path = "src/lib.rs"

[[bin]]
name = "devobox"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
shellexpand = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

[profile.release]
lto = true
strip = true
codegen-units = 1
