[package]
name = "devobox"
version = "0.6.2"
edition = "2024"

[lib]
name = "devobox"
path = "src/lib.rs"

[[bin]]
name = "devobox"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "suggestions"] }
shellexpand = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
toml = "0.9"
self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
strip = true
codegen-units = 1
